--- a/client.html
+++ b/client.html
@@ -101,7 +101,7 @@
 
                             <div>
                                 <br>
-                                <label for="paiement">paiement</label>
+                                <label for="paiement">Paiement</label>
                             </div>
                             
                             <div class="row">
