--- a/Connect.html
+++ b/Connect.html
@@ -19,7 +19,7 @@
                     <input type="radio" checked="checked" name="radio">
                     <span class="checkmark"></span>
                 </label>
-                <label class="container" style="float:right">Chauffeur
+                <label class="container" style="float:right">Chauffeur.e
                     <input type="radio" name="radio">
                     <span class="checkmark"></span>
                 </label>
