--- a/chauffeur.html
+++ b/chauffeur.html
@@ -115,7 +115,7 @@
                                             <option value="2">2</option>
                                             <option value="3">3</option>
                                             <option value="4">4</option>
-                                            <option value="autre">Autre...</option>
+                                            <option value="autre">Autre....</option>
                                         </select>
 
                                     </div>
