--- a/Connect.html
+++ b/Connect.html
@@ -15,7 +15,7 @@
             <div>
                 <h2 style="color:black"> Je suis un ...</h2>
                 
-                <label class="container" style="float:left;">Passager.e
+                <label class="container" style="float:left;">Passager
                     <input type="radio" checked="checked" name="radio">
                     <span class="checkmark"></span>
                 </label>
