--- a/Connect.html
+++ b/Connect.html
@@ -19,7 +19,7 @@
                     <input type="radio" checked="checked" name="radio">
                     <span class="checkmark"></span>
                 </label>
-                <label class="container" style="float:right">Chauffeur.e
+                <label class="container" style="float:right">Chauffeur
                     <input type="radio" name="radio">
                     <span class="checkmark"></span>
                 </label>
@@ -56,8 +56,9 @@
             <div style="text-align: center;">
                 <a href="#" class="button"> Je me connecte </a>
                 
-                <p> Tu n'as pas encore de compte ?
-                <a href="client.html" class="text"> Je m'inscris </a></p> 
+                <p> Tu n'as pas encore de compte ?  <br> 
+                <a href="client.html" class="text"> Je m'inscris en tant que client</a><br>  
+                <a href="chauffeur.html" class="text"> Je m'inscris en tant que chauffeur</a></p> 
             </div>
             
         </section>
