--- a/client.html
+++ b/client.html
@@ -11,8 +11,8 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn">S'inscrire</button>
             <div class="dropdown-content">
-                <a href="client.html">Passager.e</a>
-                <a href="chauffeur.html">Chauffeur.e</a>
+                <a href="client.html">Passager</a>
+                <a href="chauffeur.html">Chauffeur</a>
             </div>
         </div>
         <div class="topnav">
@@ -37,7 +37,7 @@
                                   <label for="nom">Nom</label>
                                 </div>
                                 <div class="col-75">
-                                  <input type="text" id="nom" name="nomFamille" placeholder="Ton nom de famille..." required>
+                                  <input type="text" id="nom" name="nomFamille" placeholder="Votre nom de famille..." required>
                                 </div>
                               </div>
                               <div class="row">
@@ -45,7 +45,7 @@
                                   <label for="prenom">Prénom</label>
                                 </div>
                                 <div class="col-75">
-                                  <input type="text" id="prenom" name="prenom" placeholder="Ton prénom..." required>
+                                  <input type="text" id="prenom" name="prenom" placeholder="Votre prénom..." required>
                                 </div>
                               </div>
                               <div class="row">
@@ -86,7 +86,7 @@
                                     <label for="adresse">Adresse</label>
                                 </div>
                                 <div class="col-75">
-                                    <input type="text" id="adresse" name="adresse" placeholder="Ton adresse.." required>
+                                    <input type="text" id="adresse" name="adresse" placeholder="Votre adresse..." required>
                                 </div>
                             </div>
 
@@ -95,7 +95,7 @@
                                     <label for="tel">Numéro de téléphone</label>
                                 </div>
                                 <div class="col-75">
-                                    <input type="text" id="tel" name="numtel" placeholder="Ton num.." required>
+                                    <input type="text" id="tel" name="numtel" placeholder="Votre numéro..." required>
                                 </div>
                             </div>
 
