--- a/chauffeur.html
+++ b/chauffeur.html
@@ -10,8 +10,8 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn">S'inscrire</button>
             <div class="dropdown-content">
-                <a href="client.html">Passager.e</a>
-                <a href="chauffeur.html">Chauffeur.e</a>
+                <a href="client.html">Passager</a>
+                <a href="chauffeur.html">Chauffeur</a>
             </div>
         </div>
         <div class="topnav">
@@ -38,7 +38,7 @@
                                   <label for="fname">Nom</label>
                                 </div>
                                 <div class="col-75">
-                                  <input type="text" id="fname" name="firstname" placeholder="Ton nom de famille...">
+                                  <input type="text" id="fname" name="firstname" placeholder="Votre nom de famille...">
                                 </div>
                               </div>
                               <div class="row">
@@ -46,7 +46,7 @@
                                   <label for="lname">Prénom</label>
                                 </div>
                                 <div class="col-75">
-                                  <input type="text" id="lname" name="lastname" placeholder="Ton prénom...">
+                                  <input type="text" id="lname" name="lastname" placeholder="Votre prénom...">
                                 </div>
                               </div>
                               <div class="row">
@@ -87,12 +87,12 @@
                                     <label for="lname">Adresse</label>
                                 </div>
                                 <div class="col-75">
-                                    <input type="text" id="lname" name="lastname" placeholder="Ton adresse..">
+                                    <input type="text" id="lname" name="lastname" placeholder="Votre adresse...">
                                 </div>
                             </div>
 
                             <div>
-                                <label for="n°">Votre n° d'assurance</label>
+                                <label for="n°">N° d'assurance</label>
                                 <input type="text" id="n°" name="n°"required>
                             </div>
 
