--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title> Tax Cab, chauffeur.e privé.e </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link href="css/index-style.css"  rel="stylesheet">
 </head>
 <body>
@@ -30,7 +32,7 @@
         <div class="Image-fond">
             <div class="header" id ="head">
                 <h1>Tax Cab</h1>
-                <p>Chauffeur.e privé.e pour nos Clients preférés</p>
+                <p>Chauffeur.e privé.e pour nos Clients preférés !</p>
             </div>
         </div>
     </div> 
@@ -76,7 +78,7 @@
         <div class = "columnR">
             <section id ="Contact">
                 <h2>Contactez-nous</h2>
-                <img  >
+                <i class="fa-thin fa-phone"></i>
                 <p><span class="tel"></span><br> +33 1 00 00 00 00</p>
 				<p><span class="mail"></span><br> info@taxcab.com</p>
             </section>
