--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="css/index-style.css"  rel="stylesheet">
 </head>
 <body>
-
     <div class="nav">
         <div class="dropdown" style="float:right;">
             <button class="dropbtn">S'inscrire</button>
@@ -17,14 +16,11 @@
                 <a href="chauffeur.html">Chauffeur.e</a>
             </div>
         </div>
+        <a href="index.html" class="logonav"><img src="images/logo2.png"></a>
         <div class="topnav">
             <a href="Connect.html" >Se connecter</a>
             <a href="#Contact">Aide</a>
             <a href="#Propos">À propos</a>
-            <div class="logonav">
-                <img href="index.html" src="images/logo2.png">
-                <a href="index.html">Tax Cab</a>
-            </div>
         </div>
     </div>
     
