--- a/client.html
+++ b/client.html
@@ -15,12 +15,9 @@
                 <a href="chauffeur.html">Chauffeur</a>
             </div>
         </div>
+        <a href="index.html" class="logonav"><img src="images/logo2.png"></a>
         <div class="topnav">
             <a href="Connect.html" >Se connecter</a>
-            <div class="logonav">
-                <img href="index.html" src="images/logo2.png">
-                <a href="index.html">Tax Cab</a>
-            </div>
         </div>
     </div>
 
