--- a/chauffeur.html
+++ b/chauffeur.html
@@ -14,14 +14,9 @@
                 <a href="chauffeur.html">Chauffeur</a>
             </div>
         </div>
+        <a href="index.html" class="logonav"><img src="images/logo2.png"></a>
         <div class="topnav">
             <a href="Connect.html" >Se connecter</a>
-            <div class="logonav">
-                
-                <p href="index.html">
-                    <img href="index.html" src="images/logo2.png">
-                </p>
-            </div>
         </div>
     </div>
     <body>
