--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="dropdown" style="float:right;">
             <button class="dropbtn">S'inscrire</button>
             <div class="dropdown-content">
-                <a href="client.html">Passager.e</a>
-                <a href="chauffeur.html">Chauffeur.e</a>
+                <a href="client.html">Passager</a>
+                <a href="chauffeur.html">Chauffeur</a>
             </div>
         </div>
         <a href="index.html" class="logonav"><img src="images/logo2.png"></a>
@@ -39,8 +39,8 @@
                 <div class="leftcolumn">
                     <h2>Qui sommes-nous ?</h2>
                     <p>Un moyen pour les chauffeurs de contacter directement leur clientèle. <br> Professionel dynamique et innovant, une plateforme ou le Passager.e est roi et le chauffeur aussi.</p>
-                    <a href="#" class="button">Chauffeur.e</a>
-                    <a href="#" class="button">Passager.e</a>
+                    <a href="#" class="button">Chauffeur</a>
+                    <a href="#" class="button">Passager</a>
                 </div>
                 <div class="rightcolumn">
                     <img src="images/covoiturage.jpg" alt = "covoiturage" style="width: 55%;">
