--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title> Tax Cab, chauffeur.e privé.e </title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="css/index-style.css"  rel="stylesheet">
 </head>
 <body>
@@ -74,18 +73,15 @@
         <div class = "columnR">
             <section id ="Contact">
                 <h2>Contactez-nous</h2>
-                <i class="fa-thin fa-phone"></i>
-                <p><span class="tel"></span><br> +33 1 00 00 00 00</p>
-				<p><span class="mail"></span><br> info@taxcab.com</p>
+                <i class="material-icons">phone</i>
+                <i class="material-icons">email</i>
+                <p>
+                    +33 1 00 00 00 00
+				    <br> info@taxcab.com
+                </p>
             </section>
         </div> 
     </div>
-
-        <!--<div class="footer" id = "copyright">
-            <div>
-                Tax Cab &copy; 2023 Copyright El Haddaji, Chartier & Sriji
-            </div>
-        </div>-->
     
     <footer class="footer-dark">
         <div class="item text">
