--- a/client.html
+++ b/client.html
@@ -36,16 +36,16 @@
                                 <div class="col-75">
                                   <input type="text" id="nom" name="nomFamille" placeholder="Votre nom de famille..." required>
                                 </div>
-                              </div>
-                              <div class="row">
+                            </div>
+                            <div class="row">
                                 <div class="col-25">
                                   <label for="prenom">Prénom</label>
                                 </div>
                                 <div class="col-75">
                                   <input type="text" id="prenom" name="prenom" placeholder="Votre prénom..." required>
                                 </div>
-                              </div>
-                              <div class="row">
+                            </div>
+                            <div class="row">
                                 <div class="col-25">
                                   <label for="Genre">Je suis</label>
                                 </div>
@@ -73,7 +73,7 @@
                                     <label for="email">Votre e-mail</label>
                                 </div>
                                 <div class="col-75">
-                                    <input type="email" id="email" name="email" placeholder="monadresse@mail.com" required>
+                                    <input type="email" id="email" name="email" placeholder="votreadresse@mail.com" required>
                                 </div>
                             </div>
 
