--- a/chauffeur.html
+++ b/chauffeur.html
@@ -26,7 +26,7 @@
                     <div id="container">
                         <!-- zone de connexion -->
                         <form action="verification.php" method="POST">
-                            <h1> Inscription chauffeurs</h1>
+                            <h1> Inscription chauffeur</h1>
 
                             <div class="row">
                                 <div class="col-25">
