--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="Image-fond">
             <div class="header" id ="head">
                 <h1>Tax Cab</h1>
-                <p>Chauffeur.e privé.e pour nos Clients preférés !</p>
+                <p>Chauffeur privé pour nos clients preférés !</p>
             </div>
         </div>
     </div> 
@@ -52,7 +52,7 @@
                     <img src="images/passager.jpg" alt = "passager" style="width: 55%;">
                 </div>
                 <div class="rightcolumn">
-                    <h2>Passager.e</h2>
+                    <h2>Passager</h2>
                     <p>Choisis facilement son chauffeur selon ses preferences pour des courses en bonne compagnie, une compagnie qui vous ressemble !</p>
                     <a href="#" class="button"> Juste ici </a>
                 </div>
@@ -61,7 +61,7 @@
         <div class = "columnG">
             <section id ="Chauffeur">
                 <div class="leftcolumn">
-                    <h2>Chauffeur.e</h2>
+                    <h2>Chauffeur</h2>
                     <p>Choisis facilement ta clientèle selon ses preferences pour des courses en bonne compagnie, une compagnie qui vous ressemble !</p>
                     <a href="#" class="button">Juste ici</a>
                 </div>
