--- a/client.html
+++ b/client.html
@@ -28,7 +28,7 @@
                     <div id="container" class = "partie1">
                         <!-- zone de connexion --> 
                         <form action=".php" method="POST">
-                            <h1> Inscription client</h1>
+                            <h1> Inscription passager</h1>
                             <div class="row">
                                 <div class="col-25">
                                   <label for="nom">Nom</label>
