--- a/client.html
+++ b/client.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <!-- importer le fichier de style -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="css/client-chauffeur_style.css" media="screen" type="text/css" />
     </head>
 
@@ -125,6 +126,14 @@
                 <h3 class="pied">Tax Cab</h3>
                 <p>L'entreprise qui vous reunie le temps d'une course.</p>
             </div>
+            <section id ="Contact">
+                <i class="material-icons">phone</i>
+                <i class="material-icons">email</i>
+                <p>
+                    +33 1 00 00 00 00
+				    <br> info@taxcab.com
+                </p>
+            </section>
             <p class="copyright">Tax Cab &copy; 2023 Copyright El Haddaji, Chartier & Sriji</p>
         </footer>
 
