--- a/Connect.html
+++ b/Connect.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title> Se connecter, Tax Cab</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="css/connect.css"  rel="stylesheet">
 </head>
 <body>
@@ -70,6 +71,16 @@
             <h3 class="pied">Tax Cab</h3>
             <p>L'entreprise qui vous reunie le temps d'une course.</p>
         </div>
+        <div class = "columnR">
+            <section id ="Contact">
+                <i class="material-icons">phone</i>
+                <i class="material-icons">email</i>
+                <p>
+                    +33 1 00 00 00 00
+				    <br> info@taxcab.com
+                </p>
+            </section>
+        </div> 
         <p class="copyright">Tax Cab &copy; 2023 Copyright El Haddaji, Chartier & Sriji</p>
     </footer>
 
