--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h1>Tax Cab</h1>
                 <h2>Chauffeur privé pour nos clients preférés !</h2>
                 <section id = "trajet" style="margin-top: 75px;">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2628.6943304573037!2d2.4478470519152737!3d48.787725579178876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673ef891c3f29%3A0x4e041435f7caf74b!2sIAE%20Paris-Est%20(ex.%20IAE%20Gustave%20Eiffel)%20-%20Ecole%20de%20Management!5e0!3m2!1sfr!2sfr!4v1679965444551!5m2!1sfr!2sfr" width="700" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2628.6943304573037!2d2.4478470519152737!3d48.787725579178876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e673ef891c3f29%3A0x4e041435f7caf74b!2sIAE%20Paris-Est%20(ex.%20IAE%20Gustave%20Eiffel)%20-%20Ecole%20de%20Management!5e0!3m2!1sfr!2sfr!4v1679965444551!5m2!1sfr!2sfr" width="50%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 
                     <div class="row" style="text-align: center; float: right; width: 50%;">
                         <h2 style="color:black; margin-top: 45px;">
