--- a/chauffeur.html
+++ b/chauffeur.html
@@ -89,6 +89,15 @@
 
                             <div class="row">
                                 <div class="col-25">
+                                    <label for="tel">Numéro de téléphone</label>
+                                </div>
+                                <div class="col-75">
+                                    <input type="text" id="tel" name="numtel" placeholder="Votre numéro..." required>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-25">
                                     <label for="n°">N° d'assurance</label>
                                 </div>
                                 <div class="col-75">
